<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:background="?attr/background_color"
    tools:context=".activity.MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_arrow"
            style="@style/imageButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_backspace_black_24dp"
            android:contentDescription="@string/go_back" />

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/toWikiBtn"
            app:layout_constraintBottom_toBottomOf="@id/toWikiBtn"
            tools:text="Saint-Petersburg"
            android:textSize="20sp"
            android:hint="@string/choose_city"
            android:gravity="center"
            />

        <ImageButton
            android:id="@+id/toWikiBtn"
            style="@style/imageButton"
            android:contentDescription="@string/change_city_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_search_black_24dp"
            />

        <TextView
            android:id="@+id/todayDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="31 дек. 1999 Ср. 23.49"
            android:gravity="center"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toWikiBtn"
            />

        <TextView
            android:id="@+id/temperatureWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/middle_line"
            app:layout_constraintTop_toBottomOf="@id/todayDate"
            />

        <TextView
            android:id="@+id/temperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/primary_color"
            android:textSize="32sp"
            app:layout_constraintEnd_toStartOf="@id/degreeWordUp"
            app:layout_constraintTop_toBottomOf="@id/temperatureWord"
            tools:text="-5" />

        <TextView
            android:id="@+id/degreeWordUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/temperatureValue"
            app:layout_constraintEnd_toEndOf="@id/temperatureWord" />


        <View
            android:id="@+id/middle_line"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="@id/temperatureWord"
            app:layout_constraintBottom_toBottomOf="@id/overcastValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/humidityWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/middle_line"
            app:layout_constraintTop_toTopOf="@id/temperatureWord"
            android:layout_marginStart="8dp"
            android:text="@string/humidity"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/humidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/humidityWord"
            app:layout_constraintTop_toBottomOf="@id/humidityWord"
            android:layout_marginTop="8dp"
            tools:text="99%"
            android:textSize="16sp"
            android:textColor="?attr/primary_color"/>

        <TextView
            android:id="@+id/overcastWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/humidityWord"
            app:layout_constraintTop_toBottomOf="@id/humidityValue"
            android:layout_marginTop="8dp"
            android:text="@string/overcast"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/overcastValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/overcastWord"
            app:layout_constraintTop_toBottomOf="@id/overcastWord"
            android:layout_marginTop="8dp"
            tools:text="Частичная облачность"
            android:textSize="14sp"
            android:textColor="?attr/primary_color"
            />

        <TextView
            android:id="@+id/weatherLastWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/overcastValue"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/weather_last_week"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewTempHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherLastWeek"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
